--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,10 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "better-sqlite3": "^11.0.0",
-    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "sqlite3": "^5.1.7"
+    "http-status-codes": "^2.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
